cambio logica y eliminacion de errores